--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Lucida Sans",
+    "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva,
+    Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+.formContainer {
+  width: 1000px;
+  margin: auto;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.4);
+  min-height: 450px;
+}
+input {
+  width: 100%;
+  padding: 15px 20px;
+  margin-top: 10px;
+  outline: none;
+  border: none;
+  background: #eee;
+  border-radius: 5px;
+}
+.formCtn {
+  margin-bottom: 1rem;
+}
+button {
+  width: 100%;
+  padding: 15px 20px;
+  color: #fff;
+  background: #032a94;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.logo {
+  color: #032a94;
+}
+button:hover {
+  background: #073ac7;
+}
+
+.formContainer-left {
+  padding: 2.5rem;
+  width: 55%;
+}
+.formContainer-left h1 {
+  font-size: 2.5rem;
+  color: #444;
+  margin-bottom: 1rem;
+}
+.formContainer-left p {
+  margin-bottom: 1rem;
+  color: #808080;
+}
+.formContainer-right {
+  width: 45%;
+  padding: 1rem;
+  display: grid;
+  place-items: center;
+  background: #032a94;
+  color: #fff;
+}
+
+.formContainer-right h1 {
+  font-size: 3rem;
 }
